--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ VITE_TAVUS_PERSONA_ID=pfcb1de3184b
 
 # Optional: Tavus Environment
 VITE_TAVUS_ENVIRONMENT=production
+
+# Supabase Configuration
+VITE_SUPABASE_URL=your_supabase_project_url_here
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
