--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-# Tavus AI Configuration
-VITE_TAVUS_API_KEY=5cef7fae11bc43a4a88b138208405b09
-VITE_TAVUS_REPLICA_ID=r89d84ea6160
-VITE_TAVUS_PERSONA_ID=pfcb1de3184b
+_# Tavus AI Configuration
+VITE_TAVUS_API_KEY=API
+VITE_TAVUS_REPLICA_ID=YOUR_REPLICA_ID
+VITE_TAVUS_PERSONA_ID=YOUR_PERSONA_ID
 
 # Optional: Tavus Environment
 VITE_TAVUS_ENVIRONMENT=production
